hphp/test/zend/good/ext/standard/tests/url/urlencode_variation_001.php.expectf
*** Testing urlencode() : usage variations ***
Error: 8 - Undefined variable: undefined_var, %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php(64)
Error: 8 - Undefined variable: unset_var, %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php(67)

Arg value 0

Warning: urlencode() expects parameter 1 to be string, integer given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 1

Warning: urlencode() expects parameter 1 to be string, integer given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 12345

Warning: urlencode() expects parameter 1 to be string, integer given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value -2345

Warning: urlencode() expects parameter 1 to be string, integer given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 10.5

Warning: urlencode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value -10.5

Warning: urlencode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 101234567000

Warning: urlencode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 1.07654321E-9

Warning: urlencode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 0.5

Warning: urlencode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74
Error: 8 - Array to string conversion, %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php(73)

Arg value Array

Warning: urlencode() expects parameter 1 to be string, array given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74
Error: 8 - Array to string conversion, %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php(73)

Arg value Array

Warning: urlencode() expects parameter 1 to be string, array given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74
Error: 8 - Array to string conversion, %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php(73)

Arg value Array

Warning: urlencode() expects parameter 1 to be string, array given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74
Error: 8 - Array to string conversion, %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php(73)

Arg value Array

Warning: urlencode() expects parameter 1 to be string, array given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74
Error: 8 - Array to string conversion, %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php(73)

Arg value Array

Warning: urlencode() expects parameter 1 to be string, array given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 

Warning: urlencode() expects parameter 1 to be string, null given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 

Warning: urlencode() expects parameter 1 to be string, null given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 1

Warning: urlencode() expects parameter 1 to be string, boolean given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 

Warning: urlencode() expects parameter 1 to be string, boolean given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 1

Warning: urlencode() expects parameter 1 to be string, boolean given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 

Warning: urlencode() expects parameter 1 to be string, boolean given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 
string(0) ""

Arg value 
string(0) ""
Error: 4096 - Object of class stdClass could not be converted to string, %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php(73)

Arg value 

Warning: urlencode() expects parameter 1 to be string, object given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 

Warning: urlencode() expects parameter 1 to be string, null given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74

Arg value 

Warning: urlencode() expects parameter 1 to be string, null given in %s/zend/good/ext/standard/tests/url/urlencode_variation_001.php on line 74
Done